objects/ssot__CareProgramAssistance__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProductId__c</fullName>
        <label>Care Program Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Assistance Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508381305_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramAssistance_CareProgramId__rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramAssistance_CareProgramId__rel</relationshipLabel>
        <relationshipName>rel_1722508381305_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508391635_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramAssistance_CareProgramPro_rel</label>
        <referenceTo>ssot__CareProgramProduct__dlm</referenceTo>
        <relationshipLabel>CareProgramAssistance_CareProgramPro_rel</relationshipLabel>
        <relationshipName>rel_1722508391635_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508693253_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramAssistance_ProgramId_map__rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>CareProgramAssistance_ProgramId_map__rel</relationshipLabel>
        <relationshipName>rel_1722508693253_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>